--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -56,7 +56,7 @@
         </li>
         <li><a href="/messages/new">New Message</a></li>
         <li><form>
-              {{ form.hidden_tag() }}
+              {{ g.csrf_form.hidden_tag() }}
               <button class="btn btn-danger btn-sm"
                 formaction="/logout"
                 formmethod="POST">
