--- a/templates/users/index.jinja
+++ b/templates/users/index.jinja
@@ -27,9 +27,11 @@
 
               {% if g.user %}
               {% if g.user.is_following(user) %}
-              <form method="POST"
-                    action="/users/stop-following/{{ user.id }}">
-                <button class="btn btn-primary btn-sm">
+              <form>
+                {{ g.csrf_form.hidden_tag() }}
+                 <button class="btn btn-primary btn-sm"
+                  formaction="/users/stop-following/{{ user.id }}"
+                  formmethod="POST">
                   Unfollow
                 </button>
               </form>
