--- a/templates/users/detail.jinja
+++ b/templates/users/detail.jinja
@@ -2,8 +2,7 @@
 
 {% block content %}
 
-<div id="warbler-hero"
-     class="full-width">
+<div id="warbler-hero" class="full-width" style="background-image:url('{{ user.header_image_url }}')">
 </div>
 <img src="{{ user.image_url }}"
      alt="Image for {{ user.username }}"
@@ -86,10 +85,10 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
-    <p>BIO HERE</p>
+    <p>{{ user.bio }}</p>
     <p class="user-location">
       <span class="bi bi-map"></span>
-      LOCATION HERE
+      {{ user.location }}
     </p>
   </div>
 
