Removed POST method New Message button.

--- a/templates/base.jinja
+++ b/templates/base.jinja
@@ -55,8 +55,7 @@
           </a>
         </li>
         <li>
-        <form action="/messages/new" method="POST">
-          {{ g.csrf_form.hidden_tag() }}
+        <form action="/messages/new">
         <button class="btn btn-danger btn-sm">New Message</button>
         </form>
         </li>
