Emptied previous template for building Liked Messages area.

--- a/templates/users/liked_messages.jinja
+++ b/templates/users/liked_messages.jinja
@@ -1,4 +1,5 @@
 {% extends 'users/detail.jinja' %}
 {% block user_details %}
 <h1>likes</h1>
+{# TODO: build out template for showing liked messages #}
 {% endblock %}
